--- a/Bakery.html
+++ b/Bakery.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>Bakery</title>
+    <title>Home</title>
     <style>
         body {
             text-align: center;
@@ -103,10 +103,10 @@
     </div>
 
     <div class="header-icons">
-        <a href="index.html" class="homepage-link">صفحه نخست</a>
         <a href="https://www.linkedin.com/in/saber-s-afshar/" target="_blank" class="linkedin-icon">
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn">
         </a>
+        <a href="index.html" class="homepage-link">صفحه نخست</a>
     </div>
 
     <button class="settings-button" onclick="toggleSettings()">تنظیمات پلن خاموشی</button>
