--- a/Bakery.html
+++ b/Bakery.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Bakery</title>
     <style>
         body {
             text-align: center;
