--- a/Job.html
+++ b/Job.html
@@ -65,15 +65,27 @@
             font-size: 1em;
             cursor: pointer;
         }
-        .linkedin-icon {
+        .header-icons {
             position: absolute;
             top: 20px;
             right: 20px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
         }
         .linkedin-icon img {
             width: 30px;
             height: 30px;
             cursor: pointer;
+        }
+        .homepage-link {
+            color: #0077b5; /* رنگ لینکدین */
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .homepage-link:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -90,10 +102,11 @@
         <img src="https://up.20script.ir/file/23a7-power1-outage1-cartoon3.jpg" alt="Power Outage Image" width="300">
     </div>
 
-    <div class="linkedin-icon">
-        <a href="https://www.linkedin.com/in/saber-s-afshar/" target="_blank">
+    <div class="header-icons">
+        <a href="https://www.linkedin.com/in/saber-s-afshar/" target="_blank" class="linkedin-icon">
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn">
         </a>
+        <a href="index.html" class="homepage-link">صفحه نخست</a>
     </div>
 
     <button class="settings-button" onclick="toggleSettings()">تنظیمات پلن خاموشی</button>
@@ -160,22 +173,25 @@
     </div>
 
     <script>
-        // داده‌های ذخیره شده در localStorage
+        // گرفتن شناسه منحصر به فرد برای هر صفحه
+        const pageId = window.location.pathname;
+
+        // داده‌های ذخیره شده در localStorage با کلید منحصر به فرد
         let outageDuration = 1;
         let selectedPlan = 1;
         let schedule = 2;
 
-        // بازیابی اطلاعات ذخیره شده
-        if (localStorage.getItem("outageDuration")) {
-            outageDuration = parseInt(localStorage.getItem("outageDuration"));
+        // بازیابی اطلاعات ذخیره شده برای این صفحه خاص
+        if (localStorage.getItem(`${pageId}_outageDuration`)) {
+            outageDuration = parseInt(localStorage.getItem(`${pageId}_outageDuration`));
             document.getElementById("outage-duration").value = outageDuration;
         }
-        if (localStorage.getItem("selectedPlan")) {
-            selectedPlan = parseInt(localStorage.getItem("selectedPlan"));
+        if (localStorage.getItem(`${pageId}_selectedPlan`)) {
+            selectedPlan = parseInt(localStorage.getItem(`${pageId}_selectedPlan`));
             document.querySelector(`input[name="plan"][value="${selectedPlan}"]`).checked = true;
         }
-        if (localStorage.getItem("schedule")) {
-            schedule = parseInt(localStorage.getItem("schedule"));
+        if (localStorage.getItem(`${pageId}_schedule`)) {
+            schedule = parseInt(localStorage.getItem(`${pageId}_schedule`));
             document.querySelector(`input[name="schedule"][value="${schedule}"]`).checked = true;
         }
 
@@ -186,13 +202,13 @@
 
         function saveSettings() {
             outageDuration = parseInt(document.getElementById('outage-duration').value);
-            localStorage.setItem("outageDuration", outageDuration);
+            localStorage.setItem(`${pageId}_outageDuration`, outageDuration);
 
             selectedPlan = parseInt(document.querySelector('input[name="plan"]:checked').value);
-            localStorage.setItem("selectedPlan", selectedPlan);
+            localStorage.setItem(`${pageId}_selectedPlan`, selectedPlan);
 
             schedule = parseInt(document.querySelector('input[name="schedule"]:checked').value);
-            localStorage.setItem("schedule", schedule);
+            localStorage.setItem(`${pageId}_schedule`, schedule);
 
             document.getElementById('settings-container').style.display = 'none';
             updateOutageTime();
