--- a/Bakery.html
+++ b/Bakery.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>Bakery</title>
+    <title>Home</title>
     <style>
         body {
             text-align: center;
@@ -30,6 +30,11 @@
             color: darkorange;
         }
         .outage-time {
+            font-size: 2em;
+            color: crimson;
+            margin-top: 20px;
+        }
+        .page-title {
             font-size: 2em;
             color: crimson;
             margin-top: 20px;
@@ -79,7 +84,7 @@
             cursor: pointer;
         }
         .homepage-link {
-            color: #0077b5; /* رنگ لینکدین */
+            color: #0077b5;
             text-decoration: none;
             font-size: 18px;
             font-weight: bold;
@@ -90,6 +95,8 @@
     </style>
 </head>
 <body>
+    <!-- عنوان صفحه -->
+    <div class="page-title">خانه</div>
 
     <!-- نمایش تاریخ و ساعت -->
     <div class="date-time" id="date-time"></div>
