--- a/Bakery.html
+++ b/Bakery.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <!-- عنوان صفحه -->
-    <div class="page-title">خانــــــــــه</div>
+    <div class="page-title">خاموشی نانوایی</div>
 
     <!-- نمایش تاریخ و ساعت -->
     <div class="date-time" id="date-time"></div>
