--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+	    color: crimson;
             text-align: center;
             margin: 0;
             padding: 0;
