--- a/Home.html
+++ b/Home.html
@@ -174,6 +174,9 @@
             <div>
                 <label><input type="radio" name="plan" value="9"> پلن 9</label>
             </div>
+            <div>
+                <label><input type="radio" name="plan" value="10"> پلن 10</label>
+            </div>
         </div>
 
         <button onclick="saveSettings()">تایید</button>
@@ -241,6 +244,8 @@
                     return { startHour: 11, endHour: 21 };
                 case 9:
                     return { startHour: 11, endHour: 23 };
+                case 10:
+                    return { startHour: 8:30, endHour: 22:30 };
                 default:
                     return { startHour: 9, endHour: 19 };
             }
