--- a/Home.html
+++ b/Home.html
@@ -151,6 +151,9 @@
             <div>
                 <label><input type="radio" name="schedule" value="9"> طرح 9 (11 تا 23)</label>
             </div>
+            <div>
+                <label><input type="radio" name="schedule" value="9"> طرح 10 (22:30 تا 8:30)</label>
+            </div>
         </div>
 
         <div>
@@ -174,8 +177,6 @@
             <div>
                 <label><input type="radio" name="plan" value="9"> پلن 9</label>
             </div>
-            <div>
-                <label><input type="radio" name="plan" value="10"> پلن 10</label>
             </div>
         </div>
 
