--- a/Home.html
+++ b/Home.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <!-- عنوان صفحه -->
-    <div class="page-title">خاموشی خانه</div>
+    <div class="page-title">خاموشی نانوایی</div>
 
     <!-- نمایش تاریخ و ساعت -->
     <div class="date-time" id="date-time"></div>
@@ -151,9 +151,6 @@
             <div>
                 <label><input type="radio" name="schedule" value="9"> طرح 9 (11 تا 23)</label>
             </div>
-            <div>
-                <label><input type="radio" name="schedule" value="9"> طرح 10 (22:30 تا 8:30)</label>
-            </div>
         </div>
 
         <div>
@@ -176,7 +173,6 @@
             </div>
             <div>
                 <label><input type="radio" name="plan" value="9"> پلن 9</label>
-            </div>
             </div>
         </div>
 
@@ -245,8 +241,6 @@
                     return { startHour: 11, endHour: 21 };
                 case 9:
                     return { startHour: 11, endHour: 23 };
-                case 10:
-                    return { startHour: 8:30, endHour: 22:30 };
                 default:
                     return { startHour: 9, endHour: 19 };
             }
