--- a/Home.html
+++ b/Home.html
@@ -245,7 +245,7 @@
                 case 9:
                     return { startHour: 11, endHour: 23 };
                 case 10:
-                    return { startHour: 8;30, endHour: 22;30 };
+                    return { startHour: 8.30, endHour: 22.30 };
                 default:
                     return { startHour: 9, endHour: 19 };
             }
