--- a/Home.html
+++ b/Home.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <!-- عنوان صفحه -->
-    <div class="page-title">خاموشی نانوایی</div>
+    <div class="page-title">خاموشی خانه</div>
 
     <!-- نمایش تاریخ و ساعت -->
     <div class="date-time" id="date-time"></div>
