--- a/Bakery.html
+++ b/Bakery.html
@@ -245,7 +245,7 @@
                 case 9:
                     return { startHour: 11, endHour: 23 };
                 case 10:
-                    return { startHour: 8.30, endHour: 22.30 };
+                    return { startHour: 22.30, endHour: 8.30 };
                 default:
                     return { startHour: 9, endHour: 19 };
             }
@@ -285,7 +285,13 @@
                 outageEnd = startHour + (outageEnd - endHour);
             }
 
-            document.getElementById("outage-time").innerHTML = `ساعت خاموشی امروز: ${outageStart} الی ${outageEnd}`;
+            // Format numbers to show decimals only when needed
+            const formatTime = (time) => {
+                return Number.isInteger(time) ? time.toString() : time.toFixed(2);
+            };
+
+            document.getElementById("outage-time").innerHTML = 
+                `ساعت خاموشی امروز: ${formatTime(outageStart)} الی ${formatTime(outageEnd)}`;
         }
 
         setInterval(updateDateTime, 1000);
