--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             justify-content: center;
             align-items: center;
             gap: 30px;
+            flex-wrap: wrap;
             margin-top: 40px;
         }
         .logo-container a {
@@ -66,6 +67,26 @@
                 <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/job.jpg" alt="محل کار">
             </a>
             <div class="caption">محل کار</div>
+        </div>
+    </div>
+    <div class="logo-container">
+        <div>
+            <a href="Ex01.html">
+                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex.jpg" alt="مکان اضافی 1">
+            </a>
+            <div class="caption">مکان اضافی 1</div>
+        </div>
+        <div>
+            <a href="Ex02.html">
+                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex2.jpg" alt="مکان اضافی 2">
+            </a>
+            <div class="caption">مکان اضافی 2</div>
+        </div>
+        <div>
+            <a href="Ex03.html">
+                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex.jpg" alt="مکان اضافی 3">
+            </a>
+            <div class="caption">مکان اضافی 3</div>
         </div>
     </div>
 </body>
