--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
             <a href="Ex01.html">
                 <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex.jpg" alt="مکان اضافی 1">
             </a>
-            <div class="caption">مکان اضافی 1</div>
+            <div class="caption"> اضافی 1</div>
         </div>
         <div>
             <a href="Ex02.html">
                 <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex2.jpg" alt="مکان اضافی 2">
             </a>
-            <div class="caption">مکان اضافی 2</div>
+            <div class="caption"> اضافی 2</div>
         </div>
         <div>
             <a href="Ex03.html">
                 <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex.jpg" alt="مکان اضافی 3">
             </a>
-            <div class="caption">مکان اضافی 3</div>
+            <div class="caption"> اضافی 3</div>
         </div>
     </div>
 </body>
