--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
         </div>
         <div>
             <a href="Ex 02.html">
-                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex2.jpg" alt="مکان اضافی 2">
+                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/EX%2002.jpg" alt="مکان اضافی 2">
             </a>
             <div class="caption"> اضافی 2</div>
         </div>
         <div>
             <a href="Ex 03.html">
-                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex.jpg" alt="مکان اضافی 3">
+                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Ex2.jpg" alt="مکان اضافی 3">
             </a>
             <div class="caption"> اضافی 3</div>
         </div>
